apps/base/podinfo/namespace.yaml
# apps/podinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
